<resources>
    <string name="app_name">My Application</string>
    <string name="election_commission_of_thailand">ELECTION COMMISSION OF THAILAND</string>
    <string name="count_down_to_election_day">Count Down To Election Day</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="next">Next</string>
</resources>